--- a/web/templates/web/share.html
+++ b/web/templates/web/share.html
@@ -2,7 +2,7 @@
 
 {% block section %}
 
-    <section class="center w-40-l ubuntu pt5">
+    <section class="center w-30-l w-50-m w-80-ns ubuntu pt5">
         <article class="pa4 black-80">
             {% if success %}
                 <p style="color: green;">{{ success }}</p>
