Add supported domain list

--- a/web/templates/web/about.html
+++ b/web/templates/web/about.html
@@ -5,7 +5,7 @@
     <section class="center w-80 w-40-l ubuntu pt5">
         <h4 class="fw4">Sharing is Caring (in short SIC)</h4>
         <p class="fw3">
-            This platform is about sharing music, video, quotes, arts etc as an Anonymous.
+            This platform is about sharing music, video, quotes, arts etc as an <b>ANONYMOUS</b>.
             Cause sometimes we get biased by people and their contents, so we get focused on consuming specific contents everyday.
         </p>
         <p class="fw3">
