--- a/web/templates/web/share.html
+++ b/web/templates/web/share.html
@@ -20,6 +20,8 @@
                         <small id="name-desc" class="f6 black-60 db mb2">Share any url you like, but if the url can't be parsed it will show error.</small>
                     </div>
                 </fieldset>
+
+                <i class="f6 black-80">*Only YouTube is supported for now.</i>
                 <div class="mt3"><input class="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6" type="submit" value="Share"></div>
             </form>
         </article>
