--- a/web/templates/web/about.html
+++ b/web/templates/web/about.html
@@ -3,7 +3,7 @@
 {% block section %}
 
     <section class="center w-80 w-40-l ubuntu pt5">
-        <h4 class="fw4">Sharing is Caring (in short SIC)</h4>
+        <h4 class="fw4">Sharing is Caring (also <a href="https://en.wikipedia.org/wiki/Sic">SIC</a>)</h4>
         <p class="fw3">
             This platform is about sharing music, video, quotes, arts etc as an <b>ANONYMOUS</b>.
             Cause sometimes we get biased by people and their contents, so we get focused on consuming specific contents everyday.
