Add tags in share page

--- a/web/templates/web/share.html
+++ b/web/templates/web/share.html
@@ -15,13 +15,20 @@
                     <legend class="ph0 mh0 fw6 clip">Share</legend>
                     <div class="mt3">
                         <label class="db fw4 lh-copy f6" for="url">Enter the URL you want to share</label>
-                        <input class="pa2 input-reset ba bg-transparent w-100 measure" type="url" name="url" id="url" autocomplete="off">
-
+                        <input class="pa2 input-reset ba bg-transparent w-100 measure" type="url" name="url" id="url" autocomplete="off" required>
                         <small id="name-desc" class="f6 black-60 db mb2">Share any url you like, but if the url can't be parsed it will show error.</small>
+
+                        <label class="db fw4 lh-copy f6 mt4" for="tag">Select an appropriate tag</label>
+                        <select class="pa2 input-reset ba bg-transparent w-100 measure" name="tag" id="tag" required>
+                            <option disabled selected value> -- Tags --</option>
+                            {% for t in tags %}
+                                <option value="{{ t }}">{{ t }}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                 </fieldset>
 
-                <i class="f6 black-80">*Only YouTube is supported for now.</i>
+                <i class="f6 black-80 mt3">*Only YouTube is supported for now.</i>
                 <div class="mt3"><input class="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6" type="submit" value="Share"></div>
             </form>
         </article>
