--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
       <style>
           .ubuntu {font-family: 'Ubuntu', sans-serif;}
+          ::-webkit-scrollbar {width: 0;background: transparent; /* make scrollbar transparent */}
       </style>
   </head>
 
