Fix domain list check

--- a/web/templates/web/index.html
+++ b/web/templates/web/index.html
@@ -28,7 +28,8 @@
                             <div class="fl w-50 w-25-m w-20-l pa2">
                                 <a class="db mw5 black link dim"
                                    title="{{ c.title }}"
-                                   href="{{ c.link }}">
+                                   href="{{ c.link }}"
+                                   target="_blank">
 
                                     <div class="aspect-ratio aspect-ratio--16x9">
                                         <div style="background-image:url({{ c.image }});"
