--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
       <style>
           .ubuntu {font-family: 'Ubuntu', sans-serif;}
           ::-webkit-scrollbar {width: 0;background: transparent; /* make scrollbar transparent */}
+          .word-break-all {word-break: break-all;}
       </style>
   </head>
 
